frontend/src/styles/App.scss
@use './partials/variables';
@use './partials/dashboard';
@use './partials/login';
@use './partials/register';
@use './partials/loading';

body {
  margin: 0;
  padding: 0;
  overflow: hidden;
  font-family: variables.$font-family;
}

#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 0;
  text-align: center;
  position: relative;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100vw;
  background-color: variables.$secondary-color;
}

.tempnav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 100;
  display: flex;
  width: 100%;
  margin: 0;
  padding: 0;
  justify-content: space-around;
  align-items: center;
  height: 100px;
  background-color: rgb(192, 188, 188);
}

.tempnav-button {
  position: fixed;
  top: 10px;
  left: 10px;
  z-index: 100;
  background-color: rgb(222, 189, 189);
  border-radius: 5px;
  padding: 0.5rem;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

